# pulsoid_heart_monitor

./: .gitignore  .pre-commit-config.yaml  README.md  config.ini  pyproject.toml  requirements.txt
docker/: Dockerfile  docker-compose.yml
pagmon/: __main__.py  main.py
